--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.scss
@@ -1,3 +1,11 @@
 @import '../../../../../../../assets/styles/mat-mixins';
 
 @include mat-form-field-background-white;
+
+.actions {
+	button {
+		height: 42px;
+		width: 42px;
+	}
+}
+
