--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
@@ -1,5 +1,8 @@
-<section id="select-agenda" *ngIf="agendas?.length" fxLayout="row" fxLayoutAlign="space-between">
-	<mat-form-field fxFlex=30% appearance="outline">
+<section id="select-agenda"
+		 *ngIf="agendas?.length"
+		 fxLayout="row" fxLayoutAlign="space-between center"
+		 fxLayout.xs="column" fxLayoutAlign.xs="space-between center">
+	<mat-form-field fxFlex.gt-xs="30%" appearance="outline">
 		<mat-label [translate]="'turnos.home.SELECT_AGENDA'"></mat-label>
 		<mat-select [(value)]="agendaSelected">
 			<mat-option *ngFor="let agenda of agendas" [value]="agenda"
@@ -14,7 +17,7 @@
 		</mat-select>
 	</mat-form-field>
 
-	<div *ngIf="agendaSelected">
+	<div class="actions" *ngIf="agendaSelected" fxLayout="row" fxLayoutGap="3px">
 		<button mat-flat-button color="primary" *hasRole="['ADMINISTRADOR_AGENDA']" id="edit_agenda" name="edit_agenda" (click)="goToEditAgenda()">
 			<mat-icon>edit</mat-icon>
 		</button>
@@ -23,57 +26,6 @@
 		</button>
 	</div>
 
-</section>
-
-<section id="empty_calendar" *ngIf="!route.firstChild">
-	<ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
-				 let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
-		<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
-			 [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
-			 [ngClass]="segment.cssClass">
-			<div class="cal-time" *ngIf="isTimeLabel">
-				{{ segment.date | calendarDate:'weekViewHour':locale }}
-			</div>
-		</div>
-	</ng-template>
-
-	<div fxLayout="row" fxLayoutAlign="space-between center">
-		<div fxLayout="row">
-			<button mat-raised-button
-					color="primary"
-					mwlCalendarPreviousView
-					[view]="'week'"
-					[(viewDate)]="viewDate"
-			>
-				Anterior
-			</button>
-			<button mat-stroked-button
-					color="primary"
-					mwlCalendarToday
-					[(viewDate)]="viewDate"
-			>
-				Hoy
-			</button>
-			<button mat-raised-button
-					color="primary"
-					mwlCalendarNextView
-					[view]="'week'"
-					[(viewDate)]="viewDate"
-			>
-				Próximo
-			</button>
-		</div>
-
-		<div>
-			<h2>{{ viewDate | calendarDate:('weekViewTitle'): undefined : 1 }}</h2>
-		</div>
-	</div>
-	<mwl-calendar-week-view [viewDate]="viewDate"
-							[hourSegmentTemplate]="weekViewHourSegmentTemplate"
-							[hourSegments]="1"
-							[dayStartHour]="8" [dayEndHour]="18"
-	>
-	</mwl-calendar-week-view>
 </section>
 
 <ng-container *ngIf="!agendas?.length">
