--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -16,9 +16,11 @@ $default-color: 50;
 		&.active,
 		&.active:focus {
 			background-color: mat-color($primary-palette, $default-color);
+
 			span, mat-icon {
 				color: mat-color($primary-palette, default);
 			}
+
 			&:hover {
 				background-color: mat-color($primary-palette, $default-color, 0.8);
 			}
@@ -63,11 +65,13 @@ $default-color: 50;
 
 	app-no-data {
 		width: 100%;
-		&.default{
+
+		&.default {
 			div.no-data {
 				margin-top: -1px;
 			}
 		}
+
 		&.primary {
 			//Solo el primary usa mat-elevation-z8
 			div.no-data {
@@ -75,6 +79,7 @@ $default-color: 50;
 				box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.1);
 			}
 		}
+
 		&.secondary {
 			div.no-data {
 				margin-top: -1px;
@@ -87,15 +92,18 @@ $default-color: 50;
 	mat-paginator {
 		width: 100%;
 		box-sizing: border-box;
-		&.default{
+
+		&.default {
 			margin-top: -1px;
 		}
+
 		&.primary {
 			//Solo el primary usa mat-elevation-z8
 			color: mat-color($primary-palette, default);
 			margin-top: -1px;
 			box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.1);
 		}
+
 		&.secondary {
 			margin-top: -1px;
 			border: solid 1px #A8A8A8;
@@ -104,24 +112,31 @@ $default-color: 50;
 
 	table.mat-table {
 		width: 100%;
+
 		th.actions {
 			max-width: 40px;
 			text-align: center;
 		}
+
 		td.actions {
 			text-align: center;
+
 			&:last-of-type {
 				text-align: end;
 			}
 		}
+
 		&.primary {
 			text-align: center;
+
 			thead {
 				background-color: mat-color($primary-palette, $default-color);
+
 				th {
 					text-align: center;
 					color: mat-color($primary-palette, default);
 				}
+
 				th, td {
 					&.actions {
 						text-align: end;
@@ -129,30 +144,39 @@ $default-color: 50;
 				}
 			}
 		}
+
 		&.secondary {
 			border-collapse: collapse;
+
 			th, td {
 				padding-left: 10px;
 				padding-right: 10px;
 				text-align: left;
+
 				&:first-of-type {
 					padding-left: 24px;
 				}
+
 				&:last-of-type {
 					padding-right: 24px;
 				}
+
 				&.actions {
 					text-align: end;
 				}
 			}
+
 			thead {
 				background-color: #F0F0F0;
+
 				th {
 					color: #282828;
 				}
 			}
+
 			tr {
 				border: solid 1px #A8A8A8;
+
 				th, td {
 					border-bottom: none;
 				}
@@ -166,14 +190,17 @@ $default-color: 50;
 
 	mat-card.box {
 		padding: 0;
+
 		mat-card-header {
 			padding: 10px;
 			border-top-left-radius: 4px;
 			border-top-right-radius: 4px;
 			background-color: mat-color($palette, $default-color);
 			color: mat-color($palette, default);
+
 			& div.mat-card-header-text {
 				align-self: center;
+
 				mat-card-title.mat-card-title {
 					font-weight: normal;
 					font-size: medium;
@@ -181,6 +208,7 @@ $default-color: 50;
 				}
 			}
 		}
+
 		mat-card-content {
 			padding: 10px;
 		}
@@ -192,6 +220,7 @@ $default-color: 50;
 	app-signo-vital-current-previous {
 		mat-card.mat-card {
 			background-color: $primary-bg;
+
 			div.current-value {
 				color: mat-color($palette, default);
 			}
@@ -205,6 +234,7 @@ $default-color: 50;
 		mat-card.mat-card {
 			border: 1px solid mat-color($palette, default);
 			background-color: $primary-bg;
+
 			span.value {
 				color: mat-color($palette, default);
 			}
@@ -239,6 +269,7 @@ $default-color: 50;
 
 @mixin mat-form-field-background-white {
 	::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start,
+	::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-gap,
 	::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end {
 		background-color: #ffffff;
 	}
