--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.scss
@@ -1,3 +1,11 @@
+@import '../../../../../assets/styles/mat-mixins';
+
+form {
+
+	@include mat-form-field-background-white;
+
+}
+
 .actions {
 	margin-bottom: 16px;
 	width: 50%;
