tg-1681 refactor agenda.component para que no dependa de new-agenda.service

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/routes/agenda/agenda.component.html
@@ -39,15 +39,15 @@
 			</div>
 
 			<div>
-				<h2>{{ viewDate | calendarDate:('weekViewTitle'): undefined : newAgendaService.getWeekStartsOn() }}</h2>
+				<h2>{{ viewDate | calendarDate:('weekViewTitle'): undefined : MONDAY }}</h2>
 			</div>
 		</div>
 		<mwl-calendar-week-view [viewDate]="viewDate"
-								[events]="newAgendaService.getEvents()"
+								[events]="events"
 								[dayStartHour]="dayStartHour" [dayEndHour]="dayEndHour"
 								[hourSegmentTemplate]="weekViewHourSegmentTemplate"
-								[hourSegments]="newAgendaService.getMinutesInHour() / newAgendaService.getAppointmentDuration()"
-								[weekStartsOn]="newAgendaService.getWeekStartsOn()"
+								[hourSegments]="hourSegments"
+								[weekStartsOn]="MONDAY"
 								(beforeViewRender)="loadCalendar($event)" (hourSegmentClicked)="onClickedSegment($event)"
 								(eventClicked)="viewAppointment($event.event)"
 		>
