tg-1674 [FE] Informar existencia de mas resultados SNOMED

--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.scss
@@ -4,6 +4,7 @@ div.spinner {
 	@include centered-spinner;
 }
 
-div.mat-h1::first-letter {
-	text-transform: uppercase;
+span.warning{
+	font-style: italic;
+	color: grey;
 }
