--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/concepts-search-dialog/concepts-search-dialog.component.html
@@ -1,8 +1,15 @@
 <div mat-dialog-title>
-	<div class="mat-h1">{{ data.searchValue }}</div>
-	<span class="mat-body-1">{{ 'internaciones.snomed-search.modal.SUBTITLE' | translate }}
+	<div class="mat-h1">{{ 'internaciones.snomed-search.modal.TITLE' | translate }}</div>
+	<div *ngIf="!!conceptsResultsTable">
+		<span class="mat-body-1" [translate]="'internaciones.snomed-search.modal.SUBTITLE'"
+			[translateParams]="{ resultsLength: conceptsResultsLength }">
+		</span>
 		<span class="mat-body-2">{{ data.searchValue }}</span>
-	</span>
+	</div>
+	<div *ngIf="conceptsResultsLength > SNOMED_RESULTS_LIMIT ">
+		<span class="mat-body-1 warning" [translate]="'internaciones.snomed-search.modal.LIMIT_WARNING'">
+		</span>
+	</div>
 </div>
 <div mat-dialog-content>
 	<div class="spinner">
