--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -112,5 +112,32 @@
 				</app-summary-card>
 			</div>
 	</section>
+
+	<section id="historical-problems" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-between start">
+
+		<mat-card id="historical-problems-card">
+			<mat-card-content>
+				<div fxLayout="row">
+					<div id="filters" class="filter-panel">
+						<h2 class="page-title" [translate]="'ambulatoria.paciente.problemas.HISTORICAL_TITLE'"></h2>
+						<mat-card-subtitle>
+							<span *ngIf="historicalProblemsList" id="historicalProblemsAmount"> {{historicalProblemsAmount}} resultados </span>
+						</mat-card-subtitle>
+						<app-historical-problems-filters></app-historical-problems-filters>
+					</div>
+					<div class="spinner" *ngIf="!historicalProblemsList">
+						<mat-spinner color="primary"></mat-spinner>
+					</div>
+					<section class="problems" id="bed-mapping" *ngIf="historicalProblemsList && historicalProblemsList.length">
+
+					</section>
+					<section class="problems" *ngIf="historicalProblemsList && !historicalProblemsList.length" fxLayout="column" fxLayoutAlign="space-around center">
+						<h2 [translate]="'ambulatoria.paciente.problemas.NO_FILTERED_PROBLEMS'"></h2>
+					</section>
+				</div>
+			</mat-card-content>
+		</mat-card>
+
+	</section>
 </app-content>
 
