--- a/front-end/webapp/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.scss
+++ b/front-end/webapp/src/app/modules/turnos/routes/agenda-setup/agenda-setup.component.scss
@@ -18,4 +18,15 @@ form {
 			width: 100%;
 		}
 	}
+
+	mwl-calendar-week-view ::ng-deep mwl-calendar-week-view-event.ng-star-inserted div {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		justify-content: center;
+	}
+
+	mwl-calendar-week-view ::ng-deep .cal-week-view .cal-event {
+		color: #000000;
+	}
 }
