tg-1693 [FE] Agregar botón de edición en ficha de paciente para todos los flavors

--- a/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -13,7 +13,7 @@
 			<app-patient-card [patient]="patientBasicData">
 				<div header class="header">
 					<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
-					<ng-container *featureFlag="'habilitarEditarPaciente'">
+					<ng-container>
 						<button mat-icon-button color="primary" *hasRole="['ADMINISTRATIVO']" (click)="goToEditProfile()">
 							<mat-icon>edit</mat-icon>
 						</button>
