--- a/front-end/webapp/src/app/modules/camas/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/camas/routes/home/home.component.scss
@@ -1,3 +1,9 @@
+@import '../../../../../assets/styles/mixins';
+
+div.spinner {
+	@include centered-spinner;
+}
+
 .filter-panel{
     min-width: 30%;
     background-color: #f3efef8e;
