tg-1737 [FE] Setear cantidad de items dinamicos en tablas

--- a/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/table/table.component.html
@@ -32,7 +32,7 @@
 	</table>
 	<mat-paginator *ngIf="(paginationEnabled) && (dataSource?.data?.length !== 0)"
 				   class="{{mainStyle}}"
-				   [pageSizeOptions]="[5, 10, 50]"
+				   [pageSizeOptions]="pageSizeOptions"
 				   showFirstLastButtons>
 	</mat-paginator>
 	<app-no-data class="{{mainStyle}}" *ngIf="dataSource?.data?.length === 0"></app-no-data>
