--- a/front-end/webapp/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
+++ b/front-end/webapp/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
@@ -25,7 +25,7 @@
 		<div translate="turnos.agenda-setup.OVERTURN_COUNT"></div>
 		<div>
 			<mat-form-field floatLabel="never" appearance="outline">
-				<input id="overTurnCount" name="overTurnCount" formControlName="overTurnCount" matInput placeholder="0"
+				<input id="overturnCount" name="overturnCount" formControlName="overturnCount" matInput placeholder="0"
 					type="number">
 			</mat-form-field>
 		</div>
