--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/historical-problems-filters/historical-problems-filters.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" fxLayout="column" fxLayoutGap="10px">
 
     <mat-form-field appearance="outline">
-        <mat-label [translate]="'gestion-camas.filters.SPECIALITY'"></mat-label>
+        <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.SPECIALITY'"></mat-label>
         <mat-select formControlName="speciality" (selectionChange)="sendAllFiltersOnFilterChange()" name="speciality">
             <mat-option *ngFor="let speciality of specialities" [value]="speciality.specialityId">
                 {{speciality.specialityDescription | translate}}
@@ -14,7 +14,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-        <mat-label [translate]="'gestion-camas.filters.SECTOR'"></mat-label>
+        <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.PROFESSIONAL'"></mat-label>
         <mat-select formControlName="professional" (selectionChange)="sendAllFiltersOnFilterChange()" name="professional">
             <mat-option *ngFor="let professional of professionals" [value]="professional.professionalId">
                 {{professional.professionalDescription | translate}}
@@ -27,7 +27,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-        <mat-label [translate]="'gestion-camas.filters.BED_CATEGORY'"></mat-label>
+        <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.PROBLEM'"></mat-label>
         <mat-select formControlName="problem" (selectionChange)="sendAllFiltersOnFilterChange()" name="problem">
             <mat-option *ngFor="let problem of problems" [value]="problem.problemId">
                 {{problem.problemDescription | translate}}
@@ -40,7 +40,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-        <mat-label [translate]="'gestion-camas.filters.PROBABLE_DISCHARGE_DATE'"></mat-label>
+        <mat-label [translate]="'ambulatoria.paciente.problemas.historical-filters.CONSULTATION_DATE'"></mat-label>
         <input matInput id="date" [matDatepicker]="myDatepicker" formControlName="consultationDate" (dateChange)="sendAllFiltersOnFilterChange()">
         <mat-icon id="clear-probable-discharge-date" *ngIf="form.controls.consultationDate.value" matDatepickerToggleIcon 
             (click)="clear(form.controls.consultationDate); $event.stopPropagation()" color="warn">close</mat-icon>
