--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -5,19 +5,19 @@
 			<h2 id="title" class="page-title" [translate]="'turnos.home.TITLE'"></h2>
 		</div>
 
-		<div class="actions" fxLayout="row" fxLayoutGap="15px" fxLayout.xs="column" fxLayoutAlign="end none" >
+		<div class="actions" fxLayout="row" fxLayoutGap="15px" fxLayout.xs="column" fxLayoutAlign="end none">
 			<form fxFlex.gt-xs="55%" [formGroup]="form" (ngSubmit)="search()">
 				<mat-form-field appearance="outline" class="aligned-form-field">
 					<input type="text"
-						   placeholder="{{ 'turnos.home.actions.SEARCH' | translate }}"
-						   aria-label="Number"
-						   formControlName="profesional"
-						   matInput
-						   [matAutocomplete]="auto">
+					       placeholder="{{ 'turnos.home.actions.SEARCH' | translate }}"
+					       aria-label="Number"
+					       formControlName="profesional"
+					       matInput
+					       [matAutocomplete]="auto">
 					<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
 						<mat-option *ngFor="let profesional of profesionalesFiltered"
-									[value]="getFullNameLicence(profesional)"
-									(onSelectionChange)="selectProfesional($event, profesional)">
+						            [value]="getFullNameLicence(profesional)"
+						            (onSelectionChange)="selectProfesional($event, profesional)">
 							<span class="mat-body">{{getFullName(profesional)}}</span>
 							<span class="mat-body-strong"> - {{profesional.licenceNumber}}</span>
 						</mat-option>
@@ -27,84 +27,13 @@
 					</button>
 				</mat-form-field>
 			</form>
-			<button mat-flat-button color="primary" id="goToNewAgendaButton" *hasRole="['ADMINISTRADOR_AGENDA']" (click)="goToNewAgenda()" fxFlexFill.xs>
+			<button mat-flat-button color="primary" id="goToNewAgendaButton" *hasRole="['ADMINISTRADOR_AGENDA']" (click)="goToNewAgenda()"
+			        fxFlexFill.xs>
 				<span class="uppercase" [translate]="'turnos.home.actions.NEW_AGENDA'"></span>
 			</button>
 		</div>
 	</section>
 
 	<router-outlet></router-outlet>
-
-	<section class="calendar" id="empty_calendar_home" *ngIf="!route.firstChild || !route.firstChild?.firstChild">
-		<ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
-					 let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
-			<div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
-				 [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
-				 [ngClass]="segment.cssClass">
-				<div class="cal-time" *ngIf="isTimeLabel">
-					{{ segment.date | calendarDate:'weekViewHour':locale }}
-				</div>
-			</div>
-		</ng-template>
-
-		<div class="header" id="header-calendar" fxLayout="row" fxLayoutAlign="space-between center">
-			<mat-button-toggle-group>
-				<mat-button-toggle class="navigation"
-								   mwlCalendarPreviousView
-								   [view]=view
-								   [(viewDate)]="viewDate"
-				>
-					Anterior
-				</mat-button-toggle>
-				<mat-button-toggle class="today"
-								   mwlCalendarToday
-								   [(viewDate)]="viewDate"
-				>
-					Hoy
-				</mat-button-toggle>
-				<mat-button-toggle class="navigation"
-								   mwlCalendarNextView
-								   [view]=view
-								   [(viewDate)]="viewDate"
-				>
-					Próximo
-				</mat-button-toggle>
-			</mat-button-toggle-group>
-
-			<div>
-						<span
-							class="mat-h2">{{ viewDate | calendarDate:(view + 'ViewTitle'): undefined : MONDAY }}</span>
-			</div>
-
-			<div>
-				<mat-button-toggle-group class="toggle-view" [(value)]="view">
-					<mat-button-toggle value="{{calendarViewEnum.Week}}">Semana</mat-button-toggle>
-					<mat-button-toggle value="{{calendarViewEnum.Day}}">Día</mat-button-toggle>
-				</mat-button-toggle-group>
-			</div>
-
-		</div>
-
-		<div [ngSwitch]="view">
-
-			<mwl-calendar-week-view [viewDate]="viewDate"
-									*ngSwitchCase="'week'"
-									[hourSegmentTemplate]="weekViewHourSegmentTemplate"
-									[dayStartHour]="8" [dayEndHour]="18"
-									[hourSegments]="1"
-			>
-			</mwl-calendar-week-view>
-
-			<mwl-calendar-day-view class="title-black"
-								   *ngSwitchCase="'day'"
-								   [viewDate]="viewDate"
-								   [hourSegments]="1"
-								   [hourSegmentTemplate]="weekViewHourSegmentTemplate"
-								   [dayStartHour]="8" [dayEndHour]="18"
-			>
-			</mwl-calendar-day-view>
-
-		</div>
-	</section>
 
 </app-content>
